tests/snapshots/integration__validate__option_unknown.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog test1 --unknown

# OUTPUT
command cat >&2 <<-'EOF' 
error: unexpected argument `--unknown` found
EOF
exit 1

# BUILD_OUTPUT
error: unexpected argument `--unknown` found
